objects/ArticleProduct__c.object
<CustomObject>
    <description>STS PR 2.0: custom object used for associating product/products with articles.</description>
    <fields>
        <fullName>ArticleId__c</fullName>
        <label>ArticleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>Business Unit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Article Products</relationshipLabel>
        <relationshipName>Article_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article Product</label>
    <nameField>
        <displayFormat>AP{0000}</displayFormat>
        <label>Article Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>